buttons alignment fix

--- a/src/components/css/Pomodore.module.css
+++ b/src/components/css/Pomodore.module.css
@@ -30,7 +30,6 @@
     display: flex;
     justify-content: space-around;
     margin-top:30px;
-    background-color:rgb(117, 119, 115);
     align-items: flex-end;
     align-items: baseline;
 }
